--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,37 @@
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.heading {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+button {
+    padding: 15px 30px;
+    font-size: 16px;
+    font-weight: 700;
+    border-radius: 10px;
+    margin: 30px;
+}
+
 #container {
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
+    border: 1px solid grey;
+    height: 600px;
+    width: 600px;
 }
 
 .cell {
     height: 70px;
-/*     flex-basis: 6%; */
-/*     border: 1px solid grey; */
     display: flex;
     align-items: center;
     justify-content: center;
